// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test DeployService Step Should be able save even if there is 63 characters limit warning for name 1`] = `
<div
  class="bp3-dialog Dialog--dialog"
>
  <div
    class="bp3-dialog-header"
  >
    <h4
      class="bp3-heading"
    >
      editService
    </h4>
  </div>
  <span
    class="bp3-icon StyledProps--main Dialog--close"
    data-icon="Stroke"
  >
    <svg
      fill="none"
      height="15"
      width="15"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M1 .8l6 6 6-6-12 12 6-6 6 6"
        stroke="#8F90A6"
        stroke-linecap="round"
        stroke-linejoin="round"
      />
    </svg>
  </span>
  <div
    class="StyledProps--font StyledProps--main Dialog--children StyledProps--padding-none"
  >
    <div
      class="OverlaySpinner--overlaySpinner"
    >
      <form
        class="FormikForm--main"
      >
        <div>
          <div
            class="StyledProps--font StyledProps--main main"
          >
            <div
              class="InputWithIdentifier--txtNameContainer TextInput--main"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
              >
                <div
                  class="Text--withDocsTooltip"
                  data-tooltip-id="deployService_identifier"
                >
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    ID
                  </p>
                </div>
                <p
                  class="StyledProps--font StyledProps--main"
                >
                  :
                </p>
                <span
                  class="bp3-popover-wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <div
                      class="bp3-editable-text bp3-disabled InputWithIdentifier--idValue"
                    >
                      <span
                        class="bp3-editable-text-content"
                        style="height: 1px; line-height: 1px; min-width: 0;"
                      >
                        New_Service
                      </span>
                    </div>
                  </span>
                </span>
              </div>
              <div
                class="bp3-form-group"
                data-id="name-0"
              >
                <label
                  class="bp3-label"
                  for="name"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="deployService_name"
                  >
                    name
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="name"
                      type="text"
                      value="New Service"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="StyledProps--font StyledProps--main"
              style="margin-bottom: 0px;"
            >
              <label
                class="Label--main bp3-label descriptionLabel"
              >
                optionalField
              </label>
              <div
                class="bp3-form-group"
                data-id="description-1"
              >
                <div
                  class="bp3-form-content"
                >
                  <textarea
                    autocomplete="off"
                    class="bp3-input bp3-fill"
                    maxlength="1024"
                    name="description"
                    placeholder="common.descriptionPlaceholder"
                  >
                    test
                  </textarea>
                </div>
              </div>
            </div>
            <div
              class="StyledProps--font StyledProps--main"
            >
              <label
                class="Label--main bp3-label descriptionLabel"
              >
                optionalField
              </label>
              <div
                class="bp3-form-group"
                data-id="undefined-2"
              >
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input bp3-tag-input"
                  >
                    <div
                      class="bp3-tag-input-values"
                    >
                      <span
                        class="bp3-tag"
                        data-tag-index="0"
                      >
                        <span
                          class="bp3-text-overflow-ellipsis bp3-fill"
                        >
                          tag1
                        </span>
                        <button
                          class="bp3-tag-remove"
                          type="button"
                        >
                          <span
                            class="bp3-icon bp3-icon-small-cross"
                            icon="small-cross"
                          >
                            <svg
                              data-icon="small-cross"
                              height="16"
                              viewBox="0 0 16 16"
                              width="16"
                            >
                              <desc>
                                small-cross
                              </desc>
                              <path
                                d="M9.41 8l2.29-2.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42L6.59 8 4.3 10.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l2.29 2.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </button>
                      </span>
                      <span
                        class="bp3-tag"
                        data-tag-index="1"
                      >
                        <span
                          class="bp3-text-overflow-ellipsis bp3-fill"
                        >
                          tag2:asd
                        </span>
                        <button
                          class="bp3-tag-remove"
                          type="button"
                        >
                          <span
                            class="bp3-icon bp3-icon-small-cross"
                            icon="small-cross"
                          >
                            <svg
                              data-icon="small-cross"
                              height="16"
                              viewBox="0 0 16 16"
                              width="16"
                            >
                              <desc>
                                small-cross
                              </desc>
                              <path
                                d="M9.41 8l2.29-2.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42L6.59 8 4.3 10.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l2.29 2.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </button>
                      </span>
                      <input
                        class="bp3-input-ghost"
                        data-mentions="kv-tag-input-tags}"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--padding-top-xlarge"
          >
            <button
              class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-primary"
              data-id="service-save"
              type="submit"
            >
              <span
                class="bp3-button-text"
              >
                save
              </span>
            </button>
            <button
              class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-tertiary"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                cancel
              </span>
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
  <footer />
</div>
`;

exports[`Test DeployService Step should render edit service view (service), then update and then save 1`] = `
<div
  class="bp3-dialog Dialog--dialog"
>
  <div
    class="bp3-dialog-header"
  >
    <h4
      class="bp3-heading"
    >
      editService
    </h4>
  </div>
  <span
    class="bp3-icon StyledProps--main Dialog--close"
    data-icon="Stroke"
  >
    <svg
      fill="none"
      height="15"
      width="15"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M1 .8l6 6 6-6-12 12 6-6 6 6"
        stroke="#8F90A6"
        stroke-linecap="round"
        stroke-linejoin="round"
      />
    </svg>
  </span>
  <div
    class="StyledProps--font StyledProps--main Dialog--children StyledProps--padding-none"
  >
    <div
      class="OverlaySpinner--overlaySpinner"
    >
      <form
        class="FormikForm--main"
      >
        <div>
          <div
            class="StyledProps--font StyledProps--main main"
          >
            <div
              class="InputWithIdentifier--txtNameContainer TextInput--main"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
              >
                <div
                  class="Text--withDocsTooltip"
                  data-tooltip-id="deployService_identifier"
                >
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    ID
                  </p>
                </div>
                <p
                  class="StyledProps--font StyledProps--main"
                >
                  :
                </p>
                <span
                  class="bp3-popover-wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <div
                      class="bp3-editable-text bp3-disabled InputWithIdentifier--idValue"
                    >
                      <span
                        class="bp3-editable-text-content"
                        style="height: 1px; line-height: 1px; min-width: 0;"
                      >
                        New_Service
                      </span>
                    </div>
                  </span>
                </span>
              </div>
              <div
                class="bp3-form-group"
                data-id="name-0"
              >
                <label
                  class="bp3-label"
                  for="name"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="deployService_name"
                  >
                    name
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="name"
                      type="text"
                      value="New Service"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="StyledProps--font StyledProps--main"
              style="margin-bottom: 0px;"
            >
              <label
                class="Label--main bp3-label descriptionLabel"
              >
                optionalField
              </label>
              <div
                class="bp3-form-group"
                data-id="description-1"
              >
                <div
                  class="bp3-form-content"
                >
                  <textarea
                    autocomplete="off"
                    class="bp3-input bp3-fill"
                    maxlength="1024"
                    name="description"
                    placeholder="common.descriptionPlaceholder"
                  >
                    test
                  </textarea>
                </div>
              </div>
            </div>
            <div
              class="StyledProps--font StyledProps--main"
            >
              <label
                class="Label--main bp3-label descriptionLabel"
              >
                optionalField
              </label>
              <div
                class="bp3-form-group"
                data-id="undefined-2"
              >
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input bp3-tag-input"
                  >
                    <div
                      class="bp3-tag-input-values"
                    >
                      <span
                        class="bp3-tag"
                        data-tag-index="0"
                      >
                        <span
                          class="bp3-text-overflow-ellipsis bp3-fill"
                        >
                          tag1
                        </span>
                        <button
                          class="bp3-tag-remove"
                          type="button"
                        >
                          <span
                            class="bp3-icon bp3-icon-small-cross"
                            icon="small-cross"
                          >
                            <svg
                              data-icon="small-cross"
                              height="16"
                              viewBox="0 0 16 16"
                              width="16"
                            >
                              <desc>
                                small-cross
                              </desc>
                              <path
                                d="M9.41 8l2.29-2.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42L6.59 8 4.3 10.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l2.29 2.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </button>
                      </span>
                      <span
                        class="bp3-tag"
                        data-tag-index="1"
                      >
                        <span
                          class="bp3-text-overflow-ellipsis bp3-fill"
                        >
                          tag2:asd
                        </span>
                        <button
                          class="bp3-tag-remove"
                          type="button"
                        >
                          <span
                            class="bp3-icon bp3-icon-small-cross"
                            icon="small-cross"
                          >
                            <svg
                              data-icon="small-cross"
                              height="16"
                              viewBox="0 0 16 16"
                              width="16"
                            >
                              <desc>
                                small-cross
                              </desc>
                              <path
                                d="M9.41 8l2.29-2.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42L6.59 8 4.3 10.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l2.29 2.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </button>
                      </span>
                      <input
                        class="bp3-input-ghost"
                        data-mentions="kv-tag-input-tags}"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--padding-top-xlarge"
          >
            <button
              class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-primary"
              data-id="service-save"
              type="submit"
            >
              <span
                class="bp3-button-text"
              >
                save
              </span>
            </button>
            <button
              class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-tertiary"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                cancel
              </span>
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
  <footer />
</div>
`;

exports[`Test DeployService Step should render service view and save 1`] = `
<div
  class="bp3-dialog Dialog--dialog"
>
  <div
    class="bp3-dialog-header"
  >
    <h4
      class="bp3-heading"
    >
      newService
    </h4>
  </div>
  <span
    class="bp3-icon StyledProps--main Dialog--close"
    data-icon="Stroke"
  >
    <svg
      fill="none"
      height="15"
      width="15"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M1 .8l6 6 6-6-12 12 6-6 6 6"
        stroke="#8F90A6"
        stroke-linecap="round"
        stroke-linejoin="round"
      />
    </svg>
  </span>
  <div
    class="StyledProps--font StyledProps--main Dialog--children StyledProps--padding-none"
  >
    <div
      class="OverlaySpinner--overlaySpinner"
    >
      <form
        class="FormikForm--main"
      >
        <div>
          <div
            class="StyledProps--font StyledProps--main main"
          >
            <div
              class="InputWithIdentifier--txtNameContainer TextInput--main"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
              >
                <div
                  class="Text--withDocsTooltip"
                  data-tooltip-id="deployService_identifier"
                >
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    ID
                  </p>
                </div>
                <p
                  class="StyledProps--font StyledProps--main"
                >
                  :
                </p>
                <span
                  class="bp3-popover-wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <div
                      class="bp3-editable-text bp3-editable-text-placeholder InputWithIdentifier--idValue"
                      tabindex="0"
                    >
                      <span
                        class="bp3-editable-text-content"
                        style="height: 1px; line-height: 1px; min-width: 0;"
                      />
                    </div>
                  </span>
                </span>
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="Edit"
                  style="vertical-align: middle; cursor: pointer;"
                >
                  <svg
                    height="12"
                    viewBox="0 0 24 24"
                    width="12"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M16.207 4.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.147.353l-11 11a.5.5 0 01-.353.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L6.06 16.046v2.293h2.294l10.699-10.7a2.5 2.5 0 00-2.293-2.292z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M16.89 6.646a.5.5 0 010 .708l-3.536 3.535a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                      fill="currentColor"
                      fill-rule="evenodd"
                      opacity="0.3"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="bp3-form-group"
                data-id="name-0"
              >
                <label
                  class="bp3-label"
                  for="name"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="deployService_name"
                  >
                    name
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="name"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="StyledProps--font StyledProps--main"
            >
              <label
                class="Label--main bp3-label descriptionLabel"
              >
                optionalField
                <span
                  class="bp3-icon StyledProps--main editOpen"
                  data-icon="Edit"
                  data-name="edit"
                  data-testid="description-edit"
                >
                  <svg
                    height="12"
                    viewBox="0 0 24 24"
                    width="12"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M16.207 4.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.147.353l-11 11a.5.5 0 01-.353.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L6.06 16.046v2.293h2.294l10.699-10.7a2.5 2.5 0 00-2.293-2.292z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M16.89 6.646a.5.5 0 010 .708l-3.536 3.535a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                      fill="currentColor"
                      fill-rule="evenodd"
                      opacity="0.3"
                    />
                  </svg>
                </span>
              </label>
            </div>
            <div
              class="StyledProps--font StyledProps--main"
            >
              <label
                class="Label--main bp3-label descriptionLabel"
              >
                optionalField
                <span
                  class="bp3-icon StyledProps--main editOpen"
                  data-icon="Edit"
                  data-name="edit"
                  data-testid="tags-edit"
                >
                  <svg
                    height="12"
                    viewBox="0 0 24 24"
                    width="12"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M16.207 4.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.147.353l-11 11a.5.5 0 01-.353.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L6.06 16.046v2.293h2.294l10.699-10.7a2.5 2.5 0 00-2.293-2.292z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M16.89 6.646a.5.5 0 010 .708l-3.536 3.535a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                      fill="currentColor"
                      fill-rule="evenodd"
                      opacity="0.3"
                    />
                  </svg>
                </span>
              </label>
            </div>
          </div>
          <div
            class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--padding-top-xlarge"
          >
            <button
              class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-primary"
              data-id="service-save"
              type="submit"
            >
              <span
                class="bp3-button-text"
              >
                save
              </span>
            </button>
            <button
              class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-tertiary"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                cancel
              </span>
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
  <footer />
</div>
`;
